src/stylesheets/certifications.css
@keyframes bannerAnimation{
    0% {
        opacity: .1;
    }

    100% {
        opacity: 1;
    }
}

.banner-fade {
    animation: bannerAnimation 2s 1 0s ease-in-out;;
}

#banner {
    width: 100%;
    height: inherit;
}

.certification-intro {
    padding: 3rem;
    background-image: url('../images/photos/banner2.png');
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#certified-icons-wrap {
    display: block;
    margin: auto;
    max-width: 1080px;
}

.certified-block {
    padding: 3rem;
}

.certified-card {
    display: block;
    margin: 1rem auto;
    background: rgb(255, 255, 255);
    border-radius: 7px;
    border: 1px solid rgb(235, 235, 235);
    padding: 1.5rem;
    -webkit-box-shadow: 0 4px 4px -4px rgba(0, 0, 0, .2);
    -moz-box-shadow: 0 4px 4px -4px rgba(0, 0, 0, .2);
    box-shadow: 0 4px 4px -4px rgba(0, 0, 0, .2);
}

#brand-logo {
    width: 125px;
    height: 75px;
    display: block;
    margin: auto;
}

#brand-name {
    font-weight: 700;
    font-size: 1.5rem;
    white-space: nowrap;
    vertical-align: middle;
}

#certified-link {
    font-size: 1rem;
    font-weight: 600;
    color: rgb(0, 60, 113);
}

a#certified-link:hover {
    text-decoration: none;
    font-weight: 800;
}

#brand-photos {
    width: 100%;
    border: 1px solid rgb(235, 235, 235);
    border-radius: 7px;
    -webkit-box-shadow: 0 4px 4px -4px rgba(0, 0, 0, .2);
    -moz-box-shadow: 0 4px 4px -4px rgba(0, 0, 0, .2);
    box-shadow: 0 4px 4px -4px rgba(0, 0, 0, .2);
}

